Harden exported proxy surfaces